# django_pettycash

./: .gitignore  Pipfile  README.md  pyproject.toml
src/: manage.py
src/dashboard/: urls.py  views.py
src/dashboard/templates/dashboard/: box-grid.html  dashboard.html  index.html  notification.html
src/django_pettycash/: .env.example  asgi.py  settings.py  urls.py  wsgi.py
src/location/: models.py  urls.py  views.py
src/location/migrations/: 0001_initial.py
src/location/templates/location/: index.html  insert.html  list.html  update.html
src/pettycash_account/: admin.py  apps.py  models.py  urls.py  views.py
src/pettycash_account/fixtures/: account-group.json  account.json
src/pettycash_account/migrations/: 0001_initial.py  0002_alter_pettycashaccount_balance.py
src/pettycash_account/templates/pettycash_account/: index.html  insert.html  list.html  update.html
src/report/: urls.py  views.py
src/static/css/: styles.css
src/static/js/: module_account.js  module_dashboard.js  module_location.js  module_notification.js  module_report.js  module_transaction.js  module_user.js  scripts.js
src/templates/: base.html
src/templates/account/: login.html
src/templates/components/: sidebar.html
src/transaction/: admin.py  consumers.py  models.py  routing.py  urls.py  views.py
src/transaction/fixtures/: purchase-category.json
src/transaction/migrations/: 0001_initial.py  0002_alter_pettycashtransaction_amount.py  0003_pettycashtransaction_receipt.py  0004_alter_pettycashtransaction_receipt.py
src/user/: urls.py  views.py
(+9 files in other folders)
