[tool.poetry]
name = "pettycash"
version = "0.1.0"
description = "Simple PettyCash Management App"
authors = ["Kusuma <sensnerd@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.11"
python-dotenv = "^1.0.0"
django-allauth = "^0.54.0"
django-cors-headers = "^3.14.0"
channels = "^4.0.0"
daphne = "^4.0.0"
pymongo = "^4.3.3"
mysqlclient = "^2.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
